@startuml projekt-ki
title Klassendiagramm der KI

class AI {
  - game : Game
  --
  + minmax(depth : int, move_count_result : int&) : Move
  + alphaBetaTimed(time : int) : Move
  - aspirationWindowAlphaBeta(depth : int, move_count_result : int&, move_list_given : Move*, last_eval : int&)
  - alphaBeta(depth : int, move_count_result : int&, move_list_given : Move*, last_eval : int&, time : int, timeOut : bool&)
  - evaluationFunction(game : Game&, player : playerName) : int
}

' === STRUCT: TTEntry ===
class TTEntry {
  - key : uint64_t
  - score : int
  - bestMove : TT_Move
  - depth : int
  - type : Flag
}

' === NAMESPACE TT as CLASS ===
class TT {
  - tt : TTEntry[2^24]
  --
  + store(key, score, bestMove, depth, type)
  + getKey(game : Game) : uint64_t
  + flipHashForMove(game : Game, old_key : uint64_t&, move : Move)
  + probe(key : uint64_t, out : TTEntry&) : bool
}

' === KLASSE Game ===
class Game {
  - moveList : Move[32]
  + bitBoards : uint64_t[10]
  + active_player : playerName
  --
  + isGameOver() : bool
  + generateMoves()
  + getMoveList() : Move*
  + makeMove(move : const Move&) : int
  + unMakeMove(move : const Move&, prevState : const int&)
}


class Move {
  + from : uint64_t = 0
  + to : uint64_t = 0
  + move_distance : int = -1
  --
  + toString() : std::string
}

' === RELATIONSHIPS ===
AI --> Game : erzeugt
Game --> Move : verwendet

AI ..> TT : verwendet statisch
TT --> TTEntry : nutzt
TTEntry --> Move : verwendet speicher effizientes




@enduml
